# Sharded-Suite

./: .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  TESTING.md  build.bat  build.ps1  cleanup_for_release.py  requirements.txt  test_config.json  test_real_model.py  test_real_model_enhanced.py  test_runner.py
docker/: entrypoint.sh
forge/: model_sharding_tool.py
patches/cuda/: gpu_memory_atlas_manager.cu  gpu_memory_atlas_manager.h
tests/: comprehensive_validation_suite.py
trainer/: incremental_model_updater.py
